--- a/web/index.html
+++ b/web/index.html
@@ -248,7 +248,7 @@
                         <div class="section-title">第7題</div>
                         <h2>想要對我們說的事情？</h2>
                         <p>
-                            曾經上過彭彭老師在台大資訊順練班的課，對彭彭老師印象深刻的地方是，老師可以用一般人而非工程師的角度，去詮釋程式邏輯，對那時候的我有很大的幫助。<br>
+                            曾經上過彭彭老師在台大資訊訓練班的課，對彭彭老師印象深刻的地方是，老師可以用一般人而非工程師的角度，去詮釋程式邏輯，對那時候的我有很大的幫助。<br>
                             期待跟希望可以加入WeHelp Bootcamp，因為在工程師這條路上不能沒有朋友。(現在的我沒有軟體背景朋友)
                         </p>
                     </div> <!-- end of text-container -->
