--- a/web/index.html
+++ b/web/index.html
@@ -231,7 +231,7 @@
                     <div class="text-container">
                         <div class="section-title">第6題</div>
                         <h2>是否有想要加入的軟體公司？為什麼想加入該公司？</h2>
-                        <p>會想加入跟數位廣告相關的公司(像是：台北數位集團)<br><br>原因是跟之前的在數位廣告工作的背景有關，那會離開轉職軟體工程師的原因是發現在數位廣告公司作廣告優化部分有太多可以E化的部分，
+                        <p>會想加入跟數位廣告相關的公司(像是：台北數位集團)<br><br>原因是跟之前的在數位廣告工作的背景有關，那會離開轉職軟體工程師的原因是發現在數位廣告公司作廣告優化部分有太多可以E化的部分。
                         </p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
